Added all the CSS changes...in one go.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <title>Welcome to 3RR: 3 Random Recipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-        <h1>Welcome to 3RR: 3 Random Recipes</h1>
-        <img src="images/chef.jpeg">
-        <p>This website will house three recipes, and provides a project created as a part of The Odin Project</p>
-        <h2>A list of 3 favourite food items:</h2>
-        <ul>
+        <h1 class="titles">Welcome to 3RR: 3 Random Recipes</h1>
+        <div class="image"><img src="images/chef.jpeg" alt="Here's a photo of a chef"></div>
+        <p class="maintext">This website will house three recipes, and provides a project created as a part of The Odin Project</p>
+        <h2 class="subheader">A list of 3 favourite food items:</h2>
+        <ul class="bullet">
             <li><a href="pages/aglioolio.html">Aglio I Olio: The Oily Garlic Favourite</a></li>
             <li><a href="pages/stirfry.html">Stir Fry: Whatever you have in the cupboard. Fried.</a></li>
             <li><a href="pages/sushi.html">Sushi: It's a pain in the ass, but delicious.</a></li>
