--- a/pages/stirfry.html
+++ b/pages/stirfry.html
@@ -3,31 +3,35 @@
     <header>
         <title>Stirfry: It's what's fer' dinner</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles/styles.css">
     </header>
 
     <body>
-        <h1>Stirfry: The everyday staple, that you can throw whatever into</h1>
-        <img src="../images/stirfry.jpeg">
-        <h2>Stirfry</h2>
+        <h1 class="titles">Stirfry: The everyday staple, that you can throw whatever into</h1>
+        <div class="image"><img src="../images/stirfry.jpeg" alt="This is a stirfry."></div>
+        <h2 class="subheader">Stirfry</h2>
         <p>A delicious midweek dinner option that you can cook in under 30 minutes, and that you can throw literally whatever you fancy into it. Got leftovers? Fry them. Don't have leftovers? Make enough stir fry that you do! This is going to be a spicy, sesame laden, variant that uses tomato paste for some initial umami</p>
         <h2>Ingredients</h2>
-        <ul>
-            <li>As many forms of vegetable that you want.</li>
-            <li>Some form of protein (tofu, quorn, meat)</li>
-            <li>Tomato paste</li>
-            <li>Soy sauce</li>
-            <li>Chilies</li>
-            <li>Rice or noodles</li>
-        </ul>
-
-        <ol>
-            <li>Place your rice onto cook if you're that way inclined, else keep an eye on when your noodles need to go in. You are after all the hoopy frood who is the boss of your noods.</li>
-            <li>Prep all of your veg and meat into the sizes you want. The smaller, the faster they cook.</li>
-            <li>I like to cook off my veg first, personally, followed by the proteins since you can bind the sauce to the protein better.</li>
-            <li>To make the sauce, once your protein is done cooking add your chilis to the oil. Once they're fragrant add a liberal amount of tomato paste and cook until it's starting to stick and caramelise. Then add soy sauce to deglaze. </li>
-            <li>Add the remaining ingredients back into the pan, and then cook until the sauce has stuck to everything.</li>
-            <li>Serve onto a plate with your noodles, or rice. You can even toss the ingredients through if you want. Go rogue. Enjoy!</li>
-        </ol>
+       <div class="center">
+            <ul>
+                <li>As many forms of vegetable that you want.</li>
+                <li>Some form of protein (tofu, quorn, meat)</li>
+                <li>Tomato paste</li>
+                <li>Soy sauce</li>
+                <li>Chilies</li>
+                <li>Rice or noodles</li>
+            </ul>
+        </div>
+        <div class="center2">
+            <ol>
+                <li>Place your rice onto cook if you're that way inclined, else keep an eye on when your noodles need to go in. You are after all the hoopy frood who is the boss of your noods.</li>
+                <li>Prep all of your veg and meat into the sizes you want. The smaller, the faster they cook.</li>
+                <li>I like to cook off my veg first, personally, followed by the proteins since you can bind the sauce to the protein better.</li>
+                <li>To make the sauce, once your protein is done cooking add your chilis to the oil. Once they're fragrant add a liberal amount of tomato paste and cook until it's starting to stick and caramelise. Then add soy sauce to deglaze. </li>
+                <li>Add the remaining ingredients back into the pan, and then cook until the sauce has stuck to everything.</li>
+                <li>Serve onto a plate with your noodles, or rice. You can even toss the ingredients through if you want. Go rogue. Enjoy!</li>
+            </ol>
+        </div>
         <p><a href="../index.html">Finally, back to home for more delicious recipes</a></p>
 
     </body>
