--- a/pages/aglioolio.html
+++ b/pages/aglioolio.html
@@ -3,35 +3,40 @@
     <header>
         <title>Aglio e Olio: Oil, Garlic, Pasta. Success.</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles/styles.css">
     </header>
 
     <body>
-        <h1>Aglio e Olio: Oil, Garlic, Pasta. Success</h1>
-        <img src="../images/aglio.jpeg">
-        <h2>Do you like pasta? Do you like Garlic? Excellent.</h2>
-        <p>A creamy sauce of emulsified oil and pasta water, flavoured with garlic and whatever else you want. What could go wrong? A dish enjoyed by students, the lazy, and chefs alike</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>125g Pasta</li>
-            <li>Water</li>
-            <li>Olive Oil</li>
-            <li>Salt</li>
-            <li>6 Cloves of garlic</li>
-            <li>Red pepper flakes</li>
-            <li>Parsley</li>
-            <li>Optional: Cheese of your choosing</li>
-        </ul>
-
-        <ol>
-            <li>The first step is the same as always, put your water on to boil.</li>
-            <li>Once the water is boiling, add enough salt that it tastes like the sea. Add your pasta</li>
-            <li>Put a cup of olive oil into a pan over medium heat, allow it to come up to temperature.</li>
-            <li>While this is warming, chop your garlic and parsley. Optional: grate your cheese at this point.</li>
-            <li>Once your garlic is done and the oil is up to temp, add the garlic to the oil and cook until fragrant. Add the chili flakes immediately afterwards. Bring off the heat.</li>
-            <li>Once your pasta is done to your liking, add the pasta to the pan straight from the pot. Bring a small amount of pasta water in as well. Agitate until the sauce emulsifies.</li>
-            <li>Add your chopped parsley, dish it up onto a plate and enjoy!</li>
-        </ol>
-        <p><a href="../index.html">Finally, back to home for more delicious recipes</a></p>
+        <h1 class="titles">Aglio e Olio: Oil, Garlic, Pasta. Success</h1>
+        <div class="image"><img src="../images/aglio.jpeg" alt="Garlicy Pasta"></div>
+        <h2 class="subheader">Do you like pasta? Do you like Garlic? Excellent.</h2>
+        <p class="maintext">A creamy sauce of emulsified oil and pasta water, flavoured with garlic and whatever else you want. What could go wrong? A dish enjoyed by students, the lazy, and chefs alike</p>
+        <h2 class="subheader">Ingredients</h2>
+        <div class="center">
+            <ul class="bullet">
+                <li>125g Pasta</li>
+                <li>Water</li>
+                <li>Olive Oil</li>
+                <li>Salt</li>
+                <li>6 Cloves of garlic</li>
+                <li>Red pepper flakes</li>
+                <li>Parsley</li>
+                <li>Optional: Cheese of your choosing</li>
+            </ul>
+    
+        </div>
+        <div class="center2">
+            <ol class = "number">
+                <li>The first step is the same as always, put your water on to boil.</li>
+                <li>Once the water is boiling, add enough salt that it tastes like the sea. Add your pasta</li>
+                <li>Put a cup of olive oil into a pan over medium heat, allow it to come up to temperature.</li>
+                <li>While this is warming, chop your garlic and parsley. Optional: grate your cheese at this point.</li>
+                <li>Once your garlic is done and the oil is up to temp, add the garlic to the oil and cook until fragrant. Add the chili flakes immediately afterwards. Bring off the heat.</li>
+                <li>Once your pasta is done to your liking, add the pasta to the pan straight from the pot. Bring a small amount of pasta water in as well. Agitate until the sauce emulsifies.</li>
+                <li>Add your chopped parsley, dish it up onto a plate and enjoy!</li>
+            </ol>
+        </div>
+        <p class="maintext"><a href="../index.html">Finally, back to home for more delicious recipes</a></p>
 
     </body>
 </html>
